<resources>
    <string name="app_name">Resepku</string>]

    <!-- bottom navigation -->
    <string name="btn_menu_home">Home</string>
    <string name="btn_menu_bookmark">Bookmarks</string>
    <string name="btn_menu_settings">Settings</string>

    <!--  home fragment  -->
    <string name="home_search_label">Find your favorite food :</string>
    <string name="home_btn_search">SEARCH</string>
    <string name="home_view_all">VIEW ALL</string>

    <!-- bookmarks fragment -->
    <string name="bookmarks_title">Bookmarks</string>

    <!--  settings fragment  -->
    <string name="settings_title">Settings</string>
    <string name="settings_profile">Profile</string>
    <string name="settings_signout">Sign Out</string>

    <!--  profile  -->
    <string name="profile_title">Profile</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_password">New Password</string>
    <string name="profile_confirm_password">Confirm New Password</string>
    <string name="profile_save">Save</string>

    <!--  detail  -->
    <string name="detail_title">Recipe Detail</string>
    <string name="detail_ingredients">Ingredients</string>
    <string name="detail_instructions">Instructions</string>
    <string name="detail_comments">Comments</string>

    <!--  comments  -->
    <string name="comments_input_placeholder">Enter your comment...</string>
    <string name="comments_not_found">No comments found.</string>

    <!--  rate  -->
    <string name="rate_title">Rate this recipe</string>
    <string name="rate_title_after">Thank you for rating this recipe</string>

    <!--  search  -->
    <string name="search_title">Browse Recipe</string>
    <string name="search_hint">Search here...</string>

    <!--  auth  -->
    <string name="auth_name">Name</string>
    <string name="auth_email">Email</string>
    <string name="auth_password">Password</string>
    <string name="auth_confirm_password">Confirm Password</string>
    <string name="auth_login">Sign In</string>
    <string name="auth_register">Sign Up</string>
    <string name="auth_dont_have_account">Do not have an account ?</string>
    <string name="auth_have_account">Already have an account ?</string>

    <!--  API resepku  -->
    <string name="api_token">LOREMIPSUM</string>
    <string name="api_login">http://rizqisyahrendra.tech:5002/auth/login</string>
    <string name="api_register">http://rizqisyahrendra.tech:5002/auth/register</string>
    <string name="api_update_user">http://rizqisyahrendra.tech:5002/auth/update-user</string>
    <string name="api_meal_list">http://rizqisyahrendra.tech:5002/meal</string>
    <string name="api_meal_detail">http://rizqisyahrendra.tech:5002/meal/detail</string>
    <string name="api_set_bookmark">http://rizqisyahrendra.tech:5002/bookmark/set</string>
    <string name="api_get_bookmark">http://rizqisyahrendra.tech:5002/bookmark</string>
    <string name="api_get_comments">http://rizqisyahrendra.tech:5002/comment/get</string>
    <string name="api_add_comments">http://rizqisyahrendra.tech:5002/comment/add</string>
    <string name="api_delete_comments">http://rizqisyahrendra.tech:5002/comment/delete</string>
    <string name="api_set_rating">http://rizqisyahrendra.tech:5002/rating/set</string>
    <string name="api_get_rating">http://rizqisyahrendra.tech:5002/rating/get</string>

    <string name="no_internet">No Internet Access.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>