<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".FragmentSetting">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:layout_margin="10dp"
        android:textColor="@color/primary1"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardSettingProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:foreground="?attr/selectableItemBackground"
        app:cardElevation="2dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        android:clickable="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_profile"
                android:paddingVertical="15dp"
                android:paddingLeft="10dp"
                android:textColor="@color/primary1"
                android:textSize="16dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="15"
                android:src="@drawable/ic_forward_right"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardSettingSignOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:foreground="?attr/selectableItemBackground"
        app:cardElevation="2dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        android:clickable="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_signout"
                android:paddingVertical="15dp"
                android:paddingLeft="10dp"
                android:textColor="@color/primary1"
                android:textSize="16dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="15"
                android:src="@drawable/ic_forward_right"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>