<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".FragmentHome">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:background="@drawable/food_background"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        app:cardElevation="5dp"
        android:layout_marginTop="-60dp">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="10dp"
           android:orientation="vertical">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/home_search_label"
               android:gravity="center"
               android:textColor="@color/primary1"
               android:textSize="16sp"/>
           <EditText
               android:id="@+id/txtHomeSearch"
               android:layout_marginTop="10dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />
           <com.google.android.material.button.MaterialButton
               android:id="@+id/btnHomeSearch"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/home_btn_search"
               app:cornerRadius="15dp"/>
       </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="64dp"
            android:orientation="vertical">
            <ProgressBar
                android:id="@+id/pgBarHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHomeReceipes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnHomeViewAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:layout_gravity="right"
                app:cornerRadius="15dp"
                android:backgroundTint="@color/secondary1"
                android:textColor="@color/primary1"
                android:text="@string/home_view_all"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>