<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:background="@color/primary1">
        <ImageView
            android:id="@+id/imgDetailResep"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/food_placeholder" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtDetailFoodName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Food Name"
                android:textStyle="bold"
                android:textColor="@color/secondary1"
                android:textSize="18sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_tag_secondary"/>
                <TextView
                    android:id="@+id/txtDetailFoodCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary1"
                    android:text="-"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_place_secondary"/>
                <TextView
                    android:id="@+id/txtDetailFoodArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary1"
                    android:text="-"/>
            </LinearLayout>
            <RatingBar
                android:id="@+id/ratingDetail"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/ratingBarStyleSmall"
                android:scaleX="2"
                android:scaleY="2"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp"
                android:max="5"
                android:isIndicator="true"/>
            <ImageView
                android:id="@+id/imgDetailBookmark"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginTop="15dp"
                android:onClick="onClickBookmark"
                android:src="@drawable/ic_bookmark"/>
        </LinearLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/detail_ingredients"
                android:textSize="18sp"
                android:textColor="@color/primary1"
                android:textStyle="bold"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDetailIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/detail_instructions"
                android:textSize="18sp"
                android:textColor="@color/primary1"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txtDetailInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/detail_instructions"
                android:textSize="16sp"
                android:textColor="@color/primary1"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/detail_comments"
                android:textSize="18sp"
                android:textColor="@color/primary1"
                android:textStyle="bold"/>
            <FrameLayout
                android:id="@+id/commentFragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>